...
                      boxShadow: AppEffects.buttonShadow,
                    ),
                    indicatorSize: TabBarIndicatorSize.tab,
                    dividerColor: AppColors.transparent,
                    padding: AppSpacing.all4,
                    tabs: isContractor
                        ? const [Tab(text: 'Perfil'), Tab(text: 'Mídia')]
                        : const [
                            Tab(text: 'Perfil'),
                            Tab(text: 'Mídia'),
                            Tab(text: 'Links'),
                          ],
                  ),
                ),
                Expanded(
                  child: TabBarView(
                    controller: tabController,
...
